Added tests and mocked database connection.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "forceConsistentCasingInFileNames": true,  
     "outDir": "dist",
     "sourceMap": true
-  }
+  },
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
