--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && node dist/src/app.js",
     "test": "jest",
     "tsc": "tsc"
   },
@@ -18,7 +18,8 @@
     "mongodb": "^3.6.4",
     "nanoid": "^3.1.20",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
